removed results json path from CLI surface
(cherry picked from commit 57c47e62f28f397e1962327b755884e09432175a)
(cherry picked from commit 32007d48de144a17699fac29e069fb94f70330cd)
(cherry picked from commit dc78ca14242db5432fe3e4effeb406c1c839f074)
(cherry picked from commit 86d2e3dbc801fee7bf2e168b8998cc8df2494123)